# techin517-dual-arm-sort

./: .gitignore  NOTICE  README.md  calibration_follower7_record.txt  calibration_result_20260504.txt  calibration_result_20260525_1802_follower7.txt  clip_classifier.py  clip_test.py  debug_detect_all.py  debug_detect_earbuds.py  debug_detect_with_clip.py  deploy_one_position.sh  detect_debug.py  dispatch_pick.py  dispatch_pick.py.526_works_battery_usb  dispatch_pick.py.before_box_fix  dispatch_pick.py.v3_today  dispatch_pick_debug.py  dispatch_pick_f7.py  dispatch_pick_f7_cross.py  dispatch_pick_f8_cross.py  dispatch_pick_v2_test.py  dispatch_test_cross.py  dispatch_test_single.py  dispatch_test_single_f7.py  do_one_demo.sh  do_one_demo.sh.follower8_v2  do_one_demo_f7.sh  do_one_demo_f8.sh  dual_arm_cross_dispatch.sh  dual_arm_dispatch.sh  dual_arm_full_dispatch.sh  earbuds_relay.sh  leader_to_follower_f7.py  leader_to_follower_f8.py  pick_pipeline.py  pipeline_to_above_only.py  pipeline_to_above_only.py.pen_backup  pure_lerobot_pick.py  pure_lerobot_pick_usb.py  (+13 more)
.devcontainer/: devcontainer.json
ros2_ws/src/soa_ros2/soa_sim2real/: package.xml  setup.cfg  setup.py
ros2_ws/src/soa_ros2/soa_sim2real/config/: lift_object.yaml
ros2_ws/src/soa_ros2/soa_sim2real/launch/: lift_object.launch.py
ros2_ws/src/soa_ros2/soa_sim2real/models/: README.md  policy.pt
ros2_ws/src/soa_ros2/soa_sim2real/soa_sim2real/: joint_order.py  lift_object_server.py  observation_assembler.py  policy_runner.py  urdf_limits.py
ros2_ws/src/soa_ros2/soa_sim2real/test/: test_policy_unit.py
(+46 files in other folders)
