<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>soa_sim2real</name>
  <version>0.0.0</version>
  <description>Sim-to-real PyTorch JIT policy runner for the SOA lift task.</description>
  <maintainer email="42076119+htchr@users.noreply.github.com">ubuntu</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>soa_interfaces</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>urdfdom_py</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
